# blackswan

./: .gitignore  CMakeLists.txt  README.md  blackswan.py  citrini_config.json  citrini_with_retirement.json  crash_prep_optimizer.py  gemini_script.py  go.mod  go.sum  gpu_backend.py  pyproject.toml
cmd/blackswan-tui/: main.go  main_test.go
internal/app/: config_loader.go  config_loader_test.go  model.go  model_config_test.go
internal/service/: manager.go
internal/storage/: storage.go
python_service/: blackswan_service.py
scripts/: benchmark_backends.py  build_and_benchmark_cuda.sh  wsl2_cuda_setup.sh
src/cuda/: bindings.cpp  sim_kernel.cu  sim_kernel.cuh
tests/: test_blackswan.py  test_crash_prep_optimizer.py
