[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "crash-prep-optimizer"
version = "0.1.0"
description = "Crash Prep Optimizer with optional CUDA extension."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[tool.scikit-build]
build.verbose = true
wheel.packages = []
